--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,13 +1,6 @@
-$primary-color: #964f4c;
-$primary-hover-color: #7c3f3a;
 $background-color: #f0f2f5;
-$container-bg-color: #fff;
-$text-color: #333;
-$box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-$border-radius: 16px;
-$input-border-radius: 8px;
-$button-border-radius: 8px;
-$nav-border-radius: 20px;
-$padding: 20px;
-$color-white: #ffffff;
-$color-brand: #e0e0e0;
+$primary-color: #0084ff;
+$secondary-color: #e4e6eb;
+$text-color: white;
+$padding: 10px;
+$border-radius: 20px;
